# ======================================================================
#  hep_concurrency main build file
#
#  cd .../path/to/build/directory
#  source .../path/to/hep_concurrency/ups/setup_for_development
#  cmake [-DCMAKE_INSTALL_PREFIX=/install/path]
#        -DCMAKE_BUILD_TYPE=$CETPKG_TYPE
#        $CETPKG_SOURCE
#  make
#  make test
#  make install
#  make package (builds distribution tarfile)
# ======================================================================

cmake_minimum_required(VERSION 3.11)

# Project information.
project(hep_concurrency VERSION 1.03.03 LANGUAGES CXX)

# cetmodules contains our cmake modules
find_package(cetmodules REQUIRED)

include(CetCMakeEnv)
cet_cmake_env()

cet_set_compiler_flags(DIAGS VIGILANT
  WERROR
  NO_UNDEFINED
  EXTRA_FLAGS -pedantic
  EXTRA_CXX_FLAGS -Wnon-virtual-dtor -Wdelete-non-virtual-dtor
  )

cet_report_compiler_flags()

# ----------------------------------------------------------------------
# Describe build prerequisites:

cet_find_library(CPPUNIT NAMES cppunit REQUIRED)
find_package(TBB REQUIRED)
# ----------------------------------------------------------------------
# Describe source tree layout:

add_subdirectory(${PROJECT_NAME})  # source code
add_subdirectory(cmakeConfig)              # cmakeConfig files
